--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,8 @@ aiortc==1.13.0
 alembic==1.16.5
 annotated-types==0.7.0
 anyio==4.10.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
 av==14.4.0
 bidict==0.23.1
 certifi==2025.8.3
@@ -28,6 +30,7 @@ Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+passlib==1.7.4
 psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.11.7
@@ -35,6 +38,7 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pyee==13.0.0
 Pygments==2.19.2
+PyJWT==2.10.1
 pylibsrtp==0.12.0
 pyOpenSSL==25.1.0
 python-dotenv==1.1.1
