--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.9.0",
+    "gsap": "^3.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.3",
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
